[package]
name = "Ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.32.3"
bitcoincore-rpc = "0.19.0" 
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
clap = { version = "4.5.18", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
mysql = "25.0.1"
lazy_static = "1.4"
redis = "0.27.4" 